2001-03-13  Dan Mueth  <dan@eazel.com>

	Removed lethal space at end of line.

	* gnibbles/help/C/Makefile.am:

2001-03-13  Dan Mueth  <dan@eazel.com>

	Updating doc build stuff to new build system.  Note that
	figures belong in a directory called "figures".

	* aisleriot/docs/C/Makefile.am:
	* aisleriot/docs/C/camelot.sgml:
	* aisleriot/docs/C/clock.sgml:
	* gataxx/help/C/Makefile.am:
	* gataxx/help/C/gataxx.sgml:
	* glines/help/C/Makefile.am:
	* glines/help/C/glines.sgml:

2001-03-13  Dan Mueth  <dan@eazel.com>

	Updating doc build stuff to new build system.  Note that
	figures belong in a directory called "figures".

	* configure.in:
	* gnibbles/help/C/Makefile.am:
	* gnibbles/help/C/figures/game.png:
	* gnibbles/help/C/figures/graphics.png:
	* gnibbles/help/C/figures/intro.png:
	* gnibbles/help/C/figures/playing.png:
	* gnibbles/help/C/figures/worm_op.png:
	* gnibbles/help/C/game.png:
	* gnibbles/help/C/gnibbles.sgml:
	* gnibbles/help/C/graphics.png:
	* gnibbles/help/C/intro.png:
	* gnibbles/help/C/playing.png:
	* gnibbles/help/C/worm_op.png:
	* gnome-stones/help/C/Makefile.am:
	* gnome-stones/help/C/figures/main-game.png:
	* gnome-stones/help/C/figures/main-start.png:
	* gnome-stones/help/C/figures/preferences-joystick.png:
	* gnome-stones/help/C/figures/preferences-main.png:
	* gnome-stones/help/C/gnome-stones.sgml:
	* gnome-stones/help/C/main-game.png:
	* gnome-stones/help/C/main-start.png:
	* gnome-stones/help/C/preferences-joystick.png:
	* gnome-stones/help/C/preferences-main.png:
	* gnome-stones/help/Makefile.am:

2001-03-13  Dan Mueth  <dan@eazel.com>

	Updating doc build stuff to new build system.  Note that
	figures belong in a directory called "figures".

	* gtali/help/C/Makefile.am:
	* gtali/help/C/figures/mainwindow.png:
	* gtali/help/C/figures/preferences.png:
	* gtali/help/C/gtali.sgml:
	* gtali/help/C/mainwindow.png:
	* gtali/help/C/preferences.png:
	* gturing/help/C/Makefile.am:
	* gturing/help/C/figures/mainwin.png: