@@ -2,6 +2,14 @@
 
 	Removed lethal space at end of line.
 
+	* aisleriot/docs/C/Makefile.am:
+	* glines/help/C/Makefile.am:
+	* gtali/help/C/Makefile.am:
+
+2001-03-13  Dan Mueth  <dan@eazel.com>
+
+	Removed lethal space at end of line.
+
 	* gnibbles/help/C/Makefile.am:
 
 2001-03-13  Dan Mueth  <dan@eazel.com>
